[gd_scene load_steps=5 format=3 uid="uid://bll1wk4hwslxj"]

[ext_resource type="Script" path="res://scripts/misc/main_menu.gd" id="1_7moer"]
[ext_resource type="Texture2D" uid="uid://yilous06kvou" path="res://textures/misc/main_menu_background.svg" id="2_7hodb"]

[sub_resource type="LabelSettings" id="LabelSettings_0jjvh"]
font_color = Color(0.34902, 0.34902, 0.34902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fo0pb"]
font_size = 86

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7moer")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7hodb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "v0.0.2"
label_settings = SubResource("LabelSettings_0jjvh")

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.334877
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer2"]
layout_mode = 2
text = "New Lands"
label_settings = SubResource("LabelSettings_fo0pb")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="LoadGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load game"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "New game"

[node name="Seed" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Seed"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ConnectToServer" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect to server"

[node name="IP" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
placeholder_text = "IP"

[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadGame" to="." method="on_load_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/NewGame" to="." method="on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/ConnectToServer" to="." method="on_connect_to_server_pressed"]
